api-server/envoy/envoy-prod.yaml
# admin:
#   access_log_path: /tmp/admin_access.log
#   address:
#     socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener1
      address:
        socket_address: { address: 0.0.0.0, port_value: 80 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: grpc_json
                codec_type: AUTO
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: /dev/stdout
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: grpc-server, timeout: { seconds: 60 } }
                      cors:
                        allow_origin:
                          - "http://localhost:3333"
                          - "https://adventar.org"
                          - "https://dev.adventar.org"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                        runtime_key: cors.local_service.enabled
                http_filters:
                  - name: envoy.grpc_web
                  - name: envoy.cors
                  - name: envoy.grpc_json_transcoder
                    config:
                      proto_descriptor: "/etc/envoy/proto.pb"
                      services: ["adventar.v1.Adventar"]
                      auto_mapping: true
                  - name: envoy.router

  clusters:
    - name: grpc-server
      connect_timeout: 1.25s
      type: logical_dns
      lb_policy: round_robin
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}
      load_assignment:
        cluster_name: grpc-server
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: localhost
                    port_value: 8080
